gcc/testsuite/rust/rustc/ui/parser/removed-syntax-enum-newtype.rs
enum e = isize; // { dg-error "" "" { target *-*-* } }

